[package]
name = "glifpathlen"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kurbo = "0.8"
glifparser = {git = "https://github.com/MFEK/glifparser.rlib", rev = "8d671602e80a6424c5afd1b39cb50c31b4fff867"}
clap = "2"
